test/compile-errors/wrong-number-type-args.crow.ast.repr
file-ast(
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			visibility: public
			typeparams: [name-range(6, out), name-range(11, in)]
			sig: sig-ast(
				range(0, 29)
				magic
				suffix(inststruct(range(15, 18), name-range(15, out)), opt)
				[
					param(
						range(20, 28)
						some(a)
						inststruct(range(22, 28), name-range(22, opt), [inststruct(range(26, 28), name-range(26, in))]))])
			body: todo)
		fun-decl(
			visibility: public
			typeparams: [name-range(44, out), name-range(49, in)]
			sig: sig-ast(
				range(37, 67)
				use-it
				suffix(inststruct(range(53, 56), name-range(53, out)), opt)
				[
					param(
						range(58, 66)
						some(a)
						inststruct(range(60, 66), name-range(60, opt), [inststruct(range(64, 66), name-range(64, in))]))])
			body: call(infix, name-range(71, magic), [inststruct(range(78, 81), name-range(78, out))], [a]))])
